# myquiver

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  NEWS.md  config.sh.in  ha_my_quiver.cpp  ha_my_quiver.hpp
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: release.yaml
mysql-test/my-quiver/: example.parquet
mysql-test/my-quiver/include/my-quiver/: have-my-quiver-deinit.inc  have-my-quiver-helper.inc  have-my-quiver.inc  have-my-quiver.opt
mysql-test/my-quiver/t/: count-star.result  count-star.test  count_star.result  count_star.test  select_all.result  select_all.test  select_double.result  select_double.test  select_float.result  select_float.test  select_from_uri.result  select_from_uri.test  select_int16.result  select_int16.test  select_int24.result  select_int24.test  select_int32.result  select_int32.test  select_int64.result  select_int64.test  select_int8.result  select_int8.test  select_text.result  select_text.test  select_types.result  select_types.test  select_uint16.result  select_uint16.test  select_uint24.result  select_uint24.test  select_uint32.result  select_uint32.test  select_uint64.result  select_uint64.test  select_uint8.result  select_uint8.test  select_varchar.result  select_varchar.test  star.result  star.test  (+1 more)
test/: generate_test_data.py  run.sh
